...
                        android:id="@+id/layoutDetailContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.group10.moneymate.ui.statistics.StatisticsDonutBreakdownView
                            android:id="@+id/donutCategoryBreakdown"
                            android:layout_width="match_parent"
                            android:layout_height="260dp"
                            android:layout_marginTop="16dp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerCategoryBreakdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:nestedScrollingEnabled="false"
                            tools:listitem="@layout/item_statistics_category_row" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerDrillTransactions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:nestedScrollingEnabled="false"
                            android:visibility="gone"
                            tools:listitem="@layout/item_transaction" />
...
